syntax = "proto3";

package resource.secrets;

option go_package = "github.com/talos-systems/talos/pkg/machinery/api/resource/secrets";

message CertAndKeyPEM {
  bytes cert = 1;
  bytes key = 2;
}

// APISpec describes secrets.API resource.
message APISpec {
  bytes ca_pem = 1;
  CertAndKeyPEM server = 2;
  CertAndKeyPEM client = 3;
}

// OsRootSpec describes secrets.OSRoot resource.
message OsRootSpec {
  // this spec is specificlaly incomplete, with protobuf encoding it won't be needed anymore
  CertAndKeyPEM ca = 1;
  string token = 2;
}

// TrustdSpec describes secrets.Trustd resource.
message TrustdSpec {
  bytes ca_pem = 1;
  CertAndKeyPEM server = 2;
}
